--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
 	"name": "three.js",
-	"version": "0.0.66",
+	"version": "0.0.68",
 	"homepage": "http://threejs.org/",
 	"description": "JavaScript 3D library",
-	"main": "build/three.js",
+	"main": "build/three.min.js",
 	"keywords": [
 		"three",
 		"threejs",
@@ -15,7 +15,6 @@
 	"ignore": [
 		"**/.*",
 		"*.md",
-		"bower.json",
 		"docs",
 		"editor",
 		"examples",
